Docs updates for 2.2 release

--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -50,7 +50,7 @@ To do this, edit the `.profile` or `.bash_profile` file:
   nano ~/.bash_profile
   ```
 
-And make sure all *EOSFactory* export statements are removed:
+And make sure that **all** *EOSFactory* export statements are removed:
 
 ```
 export EOSIO_SOURCE_DIR=...
