--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -8,29 +8,32 @@ We've tested *EOSFactory* on the following platforms:
 - MacOS 10.13 (High Sierra)
 - Windows 10 (version 1803)
 
-**NOTE:** *EOSFactory* is compatible with *EOSIO* [v1.3.x](https://github.com/EOSIO/eos/releases/tag/v1.3.0) .
+**NOTE:** *EOSFactory* is compatible with *EOSIO* [v1.5.x](https://github.com/EOSIO/eos/releases/tag/v1.5.0) .
 
 ## General prerequisites
 
-We assume that you have successfully installed *EOSIO* [v1.3.0](https://github.com/EOSIO/eos/releases/tag/v1.3.0) (or higher) on your machine. If that's not the case, please refer to [this guide](https://developers.eos.io/eosio-nodeos/docs/getting-the-code).
+We assume that you have successfully installed *EOSIO* [v1.5.0](https://github.com/EOSIO/eos/releases/tag/v1.5.0) (or higher) on your machine.
 
-**NOTE:** *EOSFactory* requires *EOSIO* to be compiled from the source code, i.e. not deployed in Docker.
+**NOTE**: As of version [v2.3](https://github.com/tokenika/eosfactory/releases/tag/v2.3), *EOSFactory* supports both *EOSIO* built from the source code (as described in [this guide](https://developers.eos.io/eosio-nodeos/docs/getting-the-code)) and *EOSIO* deployed from binaries (as described in [this guide](https://developers.eos.io/eosio-home/docs/setting-up-your-environment)), whereas Docker deployment is not supported.
 
-After the build is complete, make sure to install *EOSIO* with this command:
+If you build *EOSIO* form source files, make sure to install *EOSIO* with this command after the build is complete:
 
 ```
 sudo ./eosio_install.sh
 ```
 
+**NOTE**: As of version [v2.3](https://github.com/tokenika/eosfactory/releases/tag/v2.3), *EOSFactory* uses *EOSIO Contract Development Toolkit* (CDT) to build smart-contracts. For installation instructions please follow [this guide](https://developers.eos.io/eosio-home/docs/installing-the-contract-development-toolkit).
+
 ## Prerequisites for Ubuntu & MacOS
 
-* We assume you have [Python 3.5](https://www.python.org/downloads/release/python-356/) (or higher) installed.
+* We assume you have installed [Python 3.5](https://www.python.org/downloads/release/python-356/) (or higher).
+* We assume you have installed [pip 18.1](https://pypi.org/project/pip/) (or higher).
 
 ## Prerequisites for Windows
 
 - We assume that you have [*Windows Subsystem for Linux - Ubuntu 18.04*](https://www.microsoft.com/en-us/p/ubuntu-1804/9n9tngvndl3q) installed.
 - The only option you have regarding *EOSIO* installation is building it in the Ubuntu 18.04 bash (supplied by WSL), as it cannot be compiled directly on a Windows machine. What we recommend is clone the *EOSIO* source code in Windows and keep it in the Windows file structure, yet build it in WSL, taking advantage of the fact that the entire Windows file structure is fully accessible in WSL.
-- And finally, we assume you have [Python 3.5](https://www.python.org/downloads/release/python-356/) (or higher) available in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.6.5 by default.
+- And finally, we assume you have [Python 3.5](https://www.python.org/downloads/release/python-356/) (or higher) available in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.6.5 by default. Also make sure your WSL has [pip 18.1](https://pypi.org/project/pip/) (or higher) installed.
 
 ## Upgrading from previous version
 
@@ -50,7 +53,7 @@ To do this, edit the `.profile` or `.bash_profile` file:
   nano ~/.bash_profile
   ```
 
-And make sure that **all** *EOSFactory* export statements are removed:
+And make sure that all *EOSFactory* export statements are removed:
 
 ```
 export EOSIO_SOURCE_DIR=...
@@ -86,10 +89,9 @@ Then run the `install` script by pointing it to the *EOSIO* source code:
 ./install.sh
 ```
 
-**NOTE:** When prompted supply the correct paths:
+When prompted, supply the path pointing to the location of your smart-contract workspace, e.g. `~/Workspaces/EOS/contracts`. It has to be existent, so if you don't have it already, you need to create it manually.
 
-- The first one is the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos), e.g. `~/Workspaces/EOS/eos`.
-- The second one is the preferred location of your smart-contract workspace, e.g. `~/Workspaces/EOS/contracts`. It has to be existent, so if you don't have it already, you need to create it manually.
+**NOTE**: If you are using EOSIO built from source code (as opposed to *EOSIO* installed from binaries), you'll also be asked to supply the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos), e.g. `~/Workspaces/EOS/eos`.
 
 ## Build on Windows
 
@@ -113,12 +115,11 @@ Then run the `install` script by pointing it to the *EOSIO* source code:
 ./install.sh
 ```
 
-**NOTE:** When prompted supply the correct paths:
+When prompted, supply the path pointing to the location of your smart-contract workspace, e.g. `/mnt/d/Workspaces/EOS/contracts`. It has to be existent, so if you don't have it already, you need to create it manually.
 
-- The first one is the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos), e.g. `/mnt/d/Workspaces/EOS/eos`.
-- The second one is the preferred location of your smart-contract workspace, e.g. `/mnt/d/Workspaces/EOS/contracts`. It has to be existent, so if you don't have it already, you need to create it manually.
+**NOTE**: If you are using EOSIO built from source code (as opposed to *EOSIO* installed from binaries), you'll also be asked to supply the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos), e.g. `/mnt/d/Workspaces/EOS/eos`.
 
-## Test the build
+## Test the installation
 
 Now let's verify that EOSFactory works and is properly hooked up to *EOSIO*.
 
@@ -146,10 +147,6 @@ If the test fails due to the `can't open file 'tests/01_hello_world.py'` error, 
 
 If a unit tests fails due to the `execve` error, make sure you have executed the `eosio_install.sh` script after *EOSIO* build, as described above.
 
-#### Case 3
-
-If a unit test fails with the `No such file or directory: ~/eosio-wallet/` error, please make sure this directory exists, and if not, create one manually.
-
 ## Troubleshooting general problems
 
 First, make sure *EOSFactory* configuration is correct by running this command:
@@ -162,32 +159,27 @@ python3 utils/config.py
 As a result, you should get data similar to this:
 
 ```
-"ABIGEN_EXECUTABLE": "/mnt/d/Workspaces/EOS/eos/build/programs/eosio-abigen/eosio-abigen",
-"BOOST_INCLUDE_DIR": "/home/sygnet/opt/boost/include",
-"EOSIO_ABIGEN": null,
-"EOSIO_CLI_EXECUTABLE": "/mnt/d/Workspaces/EOS/eos/build/programs/cleos/cleos",
-"EOSIO_CONTRACT_WORKSPACE": "/mnt/d/Workspaces/EOS/contracts",
-"EOSIO_CPP": null,
-"EOSIO_GENESIS_JSON": "/mnt/d/Workspaces/EOS/eosfactory/localnode/genesis.json",
+"CONFIG_FILE": "/Users/sygnet/Workspaces/EOS/eosfactory/config.json",
+"EOSIO_ABIGEN": "/usr/local/bin/eosio-abigen",
+"EOSIO_CLI_EXECUTABLE": "/usr/local/bin/cleos",
+"EOSIO_CONTRACT_WORKSPACE": "/Users/sygnet/Workspaces/EOS/contracts",
+"EOSIO_CPP": "/usr/local/bin/eosio-cpp",
+"EOSIO_GENESIS_JSON": "/Users/sygnet/Workspaces/EOS/eosfactory/localnode/genesis.json",
 "EOSIO_KEY_PRIVATE": "5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3",
 "EOSIO_KEY_PUBLIC": "EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV",
 "EOSIO_SHARED_MEMORY_SIZE_MB": "200",
-"EOSIO_SOURCE_DIR": "/mnt/d/Workspaces/EOS/eos",
-"EOSIO_WORKSPACE": "/mnt/d/Workspaces/EOS/eos/build/contracts/",
-"KEOSD_WALLET_DIR": "/home/sygnet/eosio-wallet/",
+"EOSIO_WORKSPACE": null,
+"KEOSD_EXECUTABLE": "/usr/local/bin/keosd",
+"KEOSD_WALLET_DIR": "/Users/sygnet/eosio-wallet/",
 "LOCAL_NODE_ADDRESS": "127.0.0.1:8888",
-"LOCAL_NODE_CONFIG_DIR": "/mnt/d/Workspaces/EOS/eosfactory/localnode",
-"LOCAL_NODE_DATA_DIR": "/mnt/d/Workspaces/EOS/eosfactory/localnode",
-"LOCAL_NODE_EXECUTABLE": "/mnt/d/Workspaces/EOS/eos/build/programs/nodeos/nodeos",
+"LOCAL_NODE_CONFIG_DIR": "/Users/sygnet/Workspaces/EOS/eosfactory/localnode/",
+"LOCAL_NODE_DATA_DIR": "/Users/sygnet/Workspaces/EOS/eosfactory/localnode/",
+"LOCAL_NODE_EXECUTABLE": "/usr/local/bin/nodeos",
+"NODEOS_STDOUT": null,
 "NODE_API": "cleos",
 "NODE_IN_WINDOW": 0,
-"S2WASM_EXECUTABLE": "/mnt/d/Workspaces/EOS/eos/build/externals/binaryen/bin/eosio-s2wasm",
 "WALLET_MANAGER_ADDRESS": "127.0.0.1:8888",
-"WASM_CLANG_EXECUTABLE": "/home/sygnet/opt/wasm/bin/clang",
-"WASM_LLC_EXECUTABLE": "/home/sygnet/opt/wasm/bin/llc",
-"WASM_LLVM_LINK_EXECUTABLE": "/home/sygnet/opt/wasm/bin/llvm-link",
-"WAST2WASM_EXECUTABLE": "/mnt/d/Workspaces/EOS/eos/build/libraries/wasm-jit/Source/Programs/eosio-wast2wasm",
-"WSL_ROOT": "C:/Users/tokenika/AppData/Local/Packages/CanonicalGroupLimited.Ubuntu18.04onWindows_79rhkp1fndgsc/LocalState/rootfs"
+"WSL_ROOT": null
 ```
 
 Next, verify that all the above paths are resolved.
