--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -8,13 +8,15 @@ We've tested *EOSFactory* on the following platforms:
 - MacOS 10.13 (High Sierra)
 - Windows 10 (version 1803)
 
-**NOTE:** *EOSFactory* is compatible with *EOSIO* [v1.5.x](https://github.com/EOSIO/eos/releases/tag/v1.5.0) .
+**NOTE:** *EOSFactory* is compatible with *EOSIO* [v1.5.x](https://github.com/EOSIO/eos/releases/tag/v1.5.0).
 
 ## General prerequisites
 
 We assume that you have successfully installed *EOSIO* [v1.5.0](https://github.com/EOSIO/eos/releases/tag/v1.5.0) (or higher) on your machine.
 
-**NOTE**: As of version [v2.3](https://github.com/tokenika/eosfactory/releases/tag/v2.3), *EOSFactory* supports both *EOSIO* built from the source code (as described in [this guide](https://developers.eos.io/eosio-nodeos/docs/getting-the-code)) and *EOSIO* deployed from binaries (as described in [this guide](https://developers.eos.io/eosio-home/docs/setting-up-your-environment)), whereas Docker deployment is not supported.
+As of version [v2.3](https://github.com/tokenika/eosfactory/releases/tag/v2.3), *EOSFactory* supports both *EOSIO* built from the source code (as described in [this guide](https://developers.eos.io/eosio-nodeos/docs/getting-the-code)) and *EOSIO* deployed from binaries (as described in [this guide](https://developers.eos.io/eosio-home/docs/setting-up-your-environment)).
+
+*EOSIO* deployed in Docker is NOT supported.
 
 If you build *EOSIO* form source files, make sure to install *EOSIO* with this command after the build is complete:
 
@@ -22,7 +24,7 @@ If you build *EOSIO* form source files, make sure to install *EOSIO* with this c
 sudo ./eosio_install.sh
 ```
 
-**NOTE**: As of version [v2.3](https://github.com/tokenika/eosfactory/releases/tag/v2.3), *EOSFactory* uses *EOSIO Contract Development Toolkit* (CDT) to build smart-contracts. For installation instructions please follow [this guide](https://developers.eos.io/eosio-home/docs/installing-the-contract-development-toolkit).
+As of version [v2.3](https://github.com/tokenika/eosfactory/releases/tag/v2.3), *EOSFactory* uses *EOSIO Contract Development Toolkit* (CDT) to build smart-contracts. For installation instructions please follow [this guide](https://developers.eos.io/eosio-home/docs/installing-the-contract-development-toolkit).
 
 ## Prerequisites for Ubuntu & MacOS
 
@@ -69,7 +71,7 @@ Also, if you're on Ubuntu make sure there are no similar export statements in th
 
 When you're done, restart your console to apply the change.
 
-## Build on Ubuntu & MacOS
+## Install on Ubuntu & MacOS
 
 Clone *EOSFactory* source code from the repository:
 
@@ -91,9 +93,7 @@ Then run the `install` script by pointing it to the *EOSIO* source code:
 
 When prompted, supply the path pointing to the location of your smart-contract workspace, e.g. `~/Workspaces/EOS/contracts`. It has to be existent, so if you don't have it already, you need to create it manually.
 
-**NOTE**: If you are using EOSIO built from source code (as opposed to *EOSIO* installed from binaries), you'll also be asked to supply the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos), e.g. `~/Workspaces/EOS/eos`.
-
-## Build on Windows
+## Install on Windows
 
 Clone *EOSFactory* source code from the repository:
 
@@ -117,9 +117,7 @@ Then run the `install` script by pointing it to the *EOSIO* source code:
 
 When prompted, supply the path pointing to the location of your smart-contract workspace, e.g. `/mnt/d/Workspaces/EOS/contracts`. It has to be existent, so if you don't have it already, you need to create it manually.
 
-**NOTE**: If you are using EOSIO built from source code (as opposed to *EOSIO* installed from binaries), you'll also be asked to supply the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos), e.g. `/mnt/d/Workspaces/EOS/eos`.
-
-## Test the installation
+## Verify the installation
 
 Now let's verify that EOSFactory works and is properly hooked up to *EOSIO*.
 
@@ -184,7 +182,7 @@ As a result, you should get data similar to this:
 
 Next, verify that all the above paths are resolved.
 
-## Subsequent builds
+## Subsequent installations
 
 If you want to upgrade to the latest version of *EOSFactory*:
 
