--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -150,34 +150,52 @@ If a unit tests fails due to the `execve` error, make sure you have executed the
 First, make sure *EOSFactory* configuration is correct by running this command:
 
 ```
-cd eosfactory
-python3 utils/config.py
+python3 -m eosfactory.core.config
 ```
 
 As a result, you should get data similar to this:
 
 ```
-"CONFIG_FILE": "/Users/sygnet/Workspaces/EOS/eosfactory/config.json",
-"EOSIO_ABIGEN": "/usr/local/bin/eosio-abigen",
-"EOSIO_CLI_EXECUTABLE": "/usr/local/bin/cleos",
-"EOSIO_CONTRACT_WORKSPACE": "/Users/sygnet/Workspaces/EOS/contracts",
-"EOSIO_CPP": "/usr/local/bin/eosio-cpp",
-"EOSIO_GENESIS_JSON": "/Users/sygnet/Workspaces/EOS/eosfactory/localnode/genesis.json",
-"EOSIO_KEY_PRIVATE": "5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3",
-"EOSIO_KEY_PUBLIC": "EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV",
-"EOSIO_SHARED_MEMORY_SIZE_MB": "200",
-"EOSIO_WORKSPACE": null,
-"KEOSD_EXECUTABLE": "/usr/local/bin/keosd",
-"KEOSD_WALLET_DIR": "/Users/sygnet/eosio-wallet/",
-"LOCAL_NODE_ADDRESS": "127.0.0.1:8888",
-"LOCAL_NODE_CONFIG_DIR": "/Users/sygnet/Workspaces/EOS/eosfactory/localnode/",
-"LOCAL_NODE_DATA_DIR": "/Users/sygnet/Workspaces/EOS/eosfactory/localnode/",
-"LOCAL_NODE_EXECUTABLE": "/usr/local/bin/nodeos",
-"NODEOS_STDOUT": null,
-"NODE_API": "cleos",
-"NODE_IN_WINDOW": 0,
-"WALLET_MANAGER_ADDRESS": "127.0.0.1:8888",
-"WSL_ROOT": null
+The current configuration of EOSFactory:
+{
+    "CONFIG_FILE": "/mnt/c/Workspaces/EOS/eosfactory/config.json",
+    "EOSIO_ABIGEN": "/usr/local/eosio.cdt/bin/eosio-abigen",
+    "EOSIO_CLI_EXECUTABLE": "/usr/bin/cleos",
+    "EOSIO_CONTRACT_WORKSPACE": "/mnt/c/Workspaces/EOS/contracts",
+    "EOSIO_CPP": "/usr/local/bin/eosio-cpp",
+    "EOSIO_GENESIS_JSON": "/mnt/c/Workspaces/EOS/eosfactory/localnode/genesis.json",
+    "EOSIO_KEY_PRIVATE": "5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3",
+    "EOSIO_KEY_PUBLIC": "EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV",
+    "EOSIO_SHARED_MEMORY_SIZE_MB": "200",
+    "EOS_FACTORY_DIR": "/mnt/c/Workspaces/EOS/eosfactory",
+    "KEOSD_EXECUTABLE": "/usr/bin/keosd",
+    "KEOSD_WALLET_DIR": "/home/cartman/eosio-wallet/",
+    "LOCAL_NODE_ADDRESS": "127.0.0.1:8888",
+    "LOCAL_NODE_CONFIG_DIR": "/mnt/c/Workspaces/EOS/eosfactory/localnode/",
+    "LOCAL_NODE_DATA_DIR": "/mnt/c/Workspaces/EOS/eosfactory/localnode/",
+    "LOCAL_NODE_EXECUTABLE": "/usr/bin/nodeos",
+    "NODEOS_STDOUT": null,
+    "NODE_IN_WINDOW": 0,
+    "WALLET_MANAGER_ADDRESS": "127.0.0.1:8888",
+    "WSL_ROOT": "C:/Users/cartman/AppData/Local/Packages/CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc/LocalState/rootfs"
+}
+
+You are free to overwrite the above settings with entries in the configuration file located here:
+/mnt/c/Workspaces/EOS/eosfactory/config.json
+
+
+There are undefined setting:
+{
+    "NODEOS_STDOUT": null
+}
+
+
+The current contents of the configuration file is:
+{
+    "EOSIO_CONTRACTS": "/mnt/c/Workspaces/EOS/eosio.contracts",
+    "EOSIO_CONTRACT_WORKSPACE": "/mnt/c/Workspaces/EOS/contracts",
+    "WSL_ROOT": " C:\\Users\\cartman\\AppData\\Local\\Packages\\CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc\\LocalState\\rootfs"
+}
 ```
 
 Next, verify that all the above paths are resolved.
