--- a/docs/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/tutorials/05.InteractingWithPublicTestnet.md
@@ -31,7 +31,7 @@ Also, if you need a new account and intend to work with the [CryptoKylin Testnet
 
 #### Case 1: You do not have an account
 
-We recommend using the `utils/register_testnet.py` script with the following two parameters:
+We recommend using the `python3 -m eosfactory.utils.register_testnet` script with the following two parameters:
 
 - an URL of a public node offering access to the testnet, e.g. `http://145.239.133.201:8888`,
 - your preferred alias for the testnet, e.g. `myjungle`.
@@ -39,7 +39,7 @@ We recommend using the `utils/register_testnet.py` script with the following two
 In our case the command looks like this:
 
 ```
-python3 utils/register_testnet.py http://145.239.133.201:8888 myjungle
+python3 -m eosfactory.utils.register_testnet http://145.239.133.201:8888 myjungle
 ```
 
 In response you will receive a message similar to the following example:
@@ -66,7 +66,7 @@ myjungle:  tcfchehyagd4 @ http://145.239.133.201:8888
 
 We assume that you already have an account registered on a public testnet and this account is able to act as a master account for the *EOSFactory* testnet object, i.e. it's funded with enough liquid EOS to be able to spawn other accounts, delegate CPU & NET and buy RAM for them.
 
-We recommend using the `utils/register_testnet.py` script with the following five parameters:
+We recommend using the `python3 -m eosfactory.utils.register_testnet` script with the following five parameters:
 
 - an URL of a public node offering access to the testnet, e.g. `http://145.239.133.201:8888`,
 - your preferred alias for the testnet, e.g. `myjungle`,
@@ -77,7 +77,7 @@ We recommend using the `utils/register_testnet.py` script with the following fiv
 In our case the command looks like this:
 
 ```
-python3 utils/register_testnet.py http://88.99.97.30:38888 myjungle -a tcfchehyagd4 5JBbCwe3t6j63yerYmguRVWg7ZVDY3nKXzGYMwkR9y5w4appKhk 5JYZU9xPS54NhnJrmgQWzVXxZCWpzsVUPS3SBZVZnsPUBFtV5YK
+python3 -m eosfactory.utils.register_testnet http://88.99.97.30:38888 myjungle -a tcfchehyagd4 5JBbCwe3t6j63yerYmguRVWg7ZVDY3nKXzGYMwkR9y5w4appKhk 5JYZU9xPS54NhnJrmgQWzVXxZCWpzsVUPS3SBZVZnsPUBFtV5YK
 ```
 
 As a result, the script verifies that the account supplied by you is properly registered with the testnet and then proceeds to register the testnet with *EOSFactory*.
@@ -92,7 +92,7 @@ myjungle:  tcfchehyagd4 @ http://88.99.97.30:38888
 
 We assume here that for the purpose of unit testing you want to create a new account on the [CryptoKylin Testnet](https://www.cryptokylin.io/). If you want to use an exiting one, please refer to *Case 2* above.
 
-We recommend using the `utils/register_testnet_via_faucet.py` script with the following three parameters:
+We recommend using the `eosfactory.utils.register_testnet_via_faucet` script with the following three parameters:
 
 - an URL of a public faucet, e.g. `http://faucet.cryptokylin.io`,
 - an URL of a public node offering access to the testnet, e.g. `http://145.239.133.201:9999`,
@@ -101,7 +101,7 @@ We recommend using the `utils/register_testnet_via_faucet.py` script with the fo
 In our case the command looks like this:
 
 ```
-python3 utils/register_testnet_via_faucet.py http://faucet.cryptokylin.io http://145.239.133.201:9999 mykylin
+python3 -m eosfactory.utils.register_testnet_via_faucet http://faucet.cryptokylin.io http://145.239.133.201:9999 mykylin
 ```
 
 The output should be similar to this:
@@ -127,7 +127,7 @@ mykylin:  xlg3pao3idlq @ https://api.kylin.alohaeos.com
 Use this command:
 
 ```
-python3 utils/testnets.py
+python3 -m eosfactory.utils.testnets
 ```
 
 As a result, you should get a list similar to this:
@@ -142,7 +142,7 @@ mykylin:   xlg3pao3idlq @ https://api.kylin.alohaeos.com
 Create a new smart-contract project:
 
 ```
-python3 utils/create_project.py foo_bar 03_tic_tac_toe
+python3 -m eosfactory.utils.create_project foo_bar 03_tic_tac_toe
 ```
 
 **NOTE:** The first parameter is the name of your project (and it's also the name of the smart-contract itself), whereas the second parameter is the name of the template being used for project creation. For more details about this command please refer to [Working With EOS Contracts Using EOSFactory In VSC](04.WorkingWithEOSContractsUsingEOSFactoryInVSC.html).
