--- a/docs/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/tutorials/05.InteractingWithPublicTestnet.md
@@ -10,8 +10,8 @@ The purpose of this tutorial is to demonstrate how *EOSFactory* can be used to d
 
 - We also assume you have [Visual Studio Code](https://code.visualstudio.com/) installed. If you are on Windows and run VSC for the first time, in order to get access to *Windows Subsystem for Linux* bash terminal inside VSC, navigate to `Preferences -> Settings` and overwrite the default configuration for the `terminal.integrated.shell.windows` option:
 
-  ```
-
+  ```json
+    "terminal.integrated.shell.windows": "C:\\Windows\\sysnative\\bash.exe"
   ```
 
 
@@ -38,13 +38,13 @@ We recommend using the `python3 -m eosfactory.utils.register_testnet` script wit
 
 In our case the command looks like this:
 
-```
+```bash
 python3 -m eosfactory.utils.register_testnet http://145.239.133.201:8888 myjungle
 ```
 
 In response you will receive a message similar to the following example:
 
-```
+```bash
 Account Name: tcfchehyagd4
 Owner Public Key: EOS4x5jhfaJ6vA7z5K36dWFkeZfabRbSoSoGUQFjvWNUwtFt7jXGU
 Active Public Key: EOS8LQq1VDf1F5cBSdYvbott9GgsR7Bvz4ttR8A6RJiHDKsPdBY1c
@@ -58,7 +58,7 @@ When you are ready, type `go` to let the script verify that the newly created ac
 
 If everything works fine, you should see a message similar to this:
 
-```
+```bash
 myjungle:  tcfchehyagd4 @ http://145.239.133.201:8888
 ```
 
@@ -76,7 +76,7 @@ We recommend using the `python3 -m eosfactory.utils.register_testnet` script wit
 
 In our case the command looks like this:
 
-```
+```bash
 python3 -m eosfactory.utils.register_testnet http://88.99.97.30:38888 myjungle -a tcfchehyagd4 5JBbCwe3t6j63yerYmguRVWg7ZVDY3nKXzGYMwkR9y5w4appKhk 5JYZU9xPS54NhnJrmgQWzVXxZCWpzsVUPS3SBZVZnsPUBFtV5YK
 ```
 
@@ -84,7 +84,7 @@ As a result, the script verifies that the account supplied by you is properly re
 
 If everything works fine, you should see a message similar to this:
 
-```
+```bash
 myjungle:  tcfchehyagd4 @ http://88.99.97.30:38888
 ```
 
@@ -100,13 +100,13 @@ We recommend using the `eosfactory.utils.register_testnet_via_faucet` script wit
 
 In our case the command looks like this:
 
-```
+```bash
 python3 -m eosfactory.utils.register_testnet_via_faucet http://faucet.cryptokylin.io http://145.239.133.201:9999 mykylin
 ```
 
 The output should be similar to this:
 
-```
+```bash
 REMOTE testnet is active @ https://api.kylin.alohaeos.com.
 Registering account: http://faucet.cryptokylin.io/create_account?xlg3pao3idlq
 Account ``xlg3pao3idlq`` successfully registered.
@@ -118,7 +118,7 @@ Account ``xlg3pao3idlq`` successfully funded.
 
 If everything works fine, you should see a message similar to this:
 
-```
+```bash
 mykylin:  xlg3pao3idlq @ https://api.kylin.alohaeos.com
 ```
 
@@ -126,13 +126,13 @@ mykylin:  xlg3pao3idlq @ https://api.kylin.alohaeos.com
 
 Use this command:
 
-```
+```bash
 python3 -m eosfactory.utils.testnets
 ```
 
 As a result, you should get a list similar to this:
 
-```
+```bash
 myjungle:  dgxo1uyhoytn @ http://88.99.97.30:38888
 mykylin:   xlg3pao3idlq @ https://api.kylin.alohaeos.com
 ```
@@ -141,7 +141,7 @@ mykylin:   xlg3pao3idlq @ https://api.kylin.alohaeos.com
 
 Create a new smart-contract project:
 
-```
+```bash
 python3 -m eosfactory.utils.create_project foo_bar 03_tic_tac_toe
 ```
 
@@ -151,19 +151,19 @@ python3 -m eosfactory.utils.create_project foo_bar 03_tic_tac_toe
 
 As a result, you should get a message similar to this:
 
-```
+```bash
 Contract directory is /mnt/d/Workspaces/EOS/contracts/foo_bar
 ```
 
 Switch to the `foo_bar` folder and first execute `unittest1.py ` without any parameters, just to make sure everything works fine on a local testnet:
 
-```
+```bash
 python3 tests/unittest1.py
 ```
 
 Next, you can attempt to run the same unit test on a public testnet:
 
-```
+```bash
 python3 test/unittest1.py myjungle
 ```
 
@@ -175,11 +175,11 @@ python3 tests/unittest1.py mykylin
 
 Similarly, you can run the other (non-standard) test:
 
-```
+```bash
 python3 tests/test1.py myjungle
 ```
 
-```
+```bash
 python3 tests/test1.py mykylin
 ```
 
@@ -191,7 +191,7 @@ However, during subsequent runs those accounts are reused, which saves you a lot
 
 Use the `-r` option, if you want to run the test from scratch, i.e. with the existing accounts being removed from *EOSFactory* cache and replaced by another set of newly created accounts:
 
-```
+```bash
 python3 tests/unittest1.py myjungle -r
 ```
 
@@ -208,7 +208,7 @@ This option requires four parameters:
 
 In our case the command looks like this:
 
-```
+```bash
 python3 tests/unittest1.py -t http://88.99.97.30:38888 dgxo1uyhoytn 5JE9XSurh4Bmdw8Ynz72Eh6ZCKrxf63SmQWKrYJSXf1dEnoiKFY 5JgLo7jZhmY4huDNXwExmaWQJqyS1hGZrnSjECcpWwGU25Ym8tA
 ```
 
