--- a/docs/tutorials/05.InteractingWithPublicTestnet.md
+++ b/docs/tutorials/05.InteractingWithPublicTestnet.md
@@ -8,16 +8,15 @@ The purpose of this tutorial is to demonstrate how *EOSFactory* can be used to d
 
 - We assume that you are familiar with the material covered in [Interacting with EOS Contracts in EOSFactory](02.InteractingWithEOSContractsInEOSFactory.html) and [Building & Deploying EOS Contracts using EOSFactory](03.BuildingAndDeployingEOSContractsInEOSFactory.html).
 
-- We also assume you have [Visual Studio Code](https://code.visualstudio.com/) installed. If you are on Windows and run VSC for the first time, in order to get access to *Windows Subsystem for Linux* bash terminal inside VSC, navigate to `Preferences -> Settings` and overwrite the default configuration for the `terminal.integrated.shell.windows` option:
-
-```json
-  "terminal.integrated.shell.windows": "C:\\Windows\\sysnative\\bash.exe"
-```
-
+- We also assume you have [Visual Studio Code](https://code.visualstudio.com/) installed. If you are on Windows and run VSC for the first time, in order to get access to *Windows Subsystem for Linux* bash terminal inside VSC, navigate to `Preferences -> Settings` and overwrite the default configuration for the `terminal.integrated.shell.windows` option: <br><br>
+    `
+    "terminal.integrated.shell.windows": "C:\\Windows\\sysnative\\bash.exe"
+    `<br><br>
+Alternatively, you can execute the command `bash` in the terminal.
 
 ## The problems with public testnet
 
-To be able to create a new account on a public testnet you need an account name and two public keys (owner & active). The problem with account names is that they need to be unique and also comply with strict rules (e.g. `[a-z1-5]{12}` ).
+To be able to create a new account on a public testnet you need an account name and two public keys (owner & active). The problem with account names is that they need to be unique and also comply with strict rules (i.e. `[a-z1-5]{12}` ).
 
 Another problem is that you do not have full control of a public testnet (as is the case with a local private testnet), you cannot reset it any time you want and thus each time you use a public testnet for your smart-contract testing you need to either create a new set of accounts (which is ineffective and time consuming) or you need to carefully recycle the same set of accounts (each having a unique random name).
 
