--- a/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -223,25 +223,25 @@ As *EOSFactory* gets upgraded, it will include further libraries that enhance th
 
 You might have noticed the `logger.hpp` header file in the `src` directory. And if you have applied the `01_hello_world` template when creating your VSC project, you'll also notice the following line in the `contract.name.cpp` file:
 
-```python
+```cpp
 logger_info( "debug user name: ", name{user} );
 ```
 
 The effect of the above code entry is the following output in test results:
 
-```python
+```bash
 INFO debug user name: carol @ 8:53:50 contract.name.cpp[17](hi)
 ```
 
 A similar example can be found in the `02_eosio_token` template:
 
-```python
+```cpp
 logger_info("quantity.amount: ", quantity.amount);
 ```
 
 The effect of the above code entry is the following output in test results:
 
-```python
+```bash
 INFO quantity.amount: 250000 @ 13:29:17 contract.name.cpp[88](transfer)
 ```
 
@@ -250,6 +250,7 @@ Thus the logger utility offers you much more than just a way of monitoring the v
 **NOTE:** For the logger output to be visible in the console, make sure that your unit test contains the `Verbosity.DEBUG` flag as part of the `Logger.verbosity` options, for example:
 
 ```python
+from eosfactory.eosf import *
 verbosity([Verbosity.INFO, Verbosity.OUT, Verbosity.DEBUG])
 ```
 
