--- a/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -27,7 +27,7 @@ from eosfactory.eosf import *
 To create a new contract from a pre-defined template all you need is a name for the contract and the name of the template, for example:
 
 ```python
-contract = ContractBuilder(project_from_template("foo_bar", template="01_hello_world"))
+project_path = project_from_template("foo", template="01_hello_world")
 ```
 
 **NOTE:** Do not use spaces in contract names. What is allowed are letters, numbers, underscores `_`, dots `.` and dashes `- `. Regarding the second parameter, as of now there are three templates to choose from (i.e. `01_hello_world`, `02_eosio_token` and `03_tic_tac_toe`), with more coming in the future. This parameter is optional, the default value is `01_hello_world`.
@@ -37,19 +37,19 @@ contract = ContractBuilder(project_from_template("foo_bar", template="01_hello_w
 The above command creates a new folder and inside it a new smart-contract file is placed. However, if you want to access an existing smart-contract, use the following syntax and specifying the entire path, for example:
 
 ```python
-contract = ContractBuilder("/mnt/d/Workspaces/EOS/contracts/foo_bar")
+contract_builder_foo = ContractBuilder(project_path)
 ```
 
 Or use just the folder name, if the contract is located in the workspace you explicitly defined when installing *EOSFactory*:
 
 ```python
-contract = ContractBuilder("foo_bar")
+contract_builder_foo = ContractBuilder("foo")
 ```
 
 In a similar way, you can access demo contracts shipped with *EOSFactory*, for example:
 
 ```python
-contract = ContractBuilder("01_hello_world")
+contract_builder_hello = ContractBuilder("01_hello_world")
 ```
 
 ## Edit the source code
@@ -57,10 +57,10 @@ contract = ContractBuilder("01_hello_world")
 To check the directory where the contract's files are located:
 
 ```python
-contract.path()
+print(contract_builder_foo.path())
 ```
 
-Locate the folder containing the new contract (if you're not sure where it is, use the output produced by the `contract.path` method) and edit the `foo_bar.cpp` file in your favorite text editor by commenting out line `18`, i.e. `require_auth( user ) `:
+Locate the folder containing the new contract (if you're not sure where it is, use the output produced by the `contract_builder_foo.path` method) and edit the `foo.cpp` file in your favorite text editor by commenting out line `18`, i.e. `require_auth( user ) `:
 
 ```cpp
 #include <eosiolib/eosio.hpp>
@@ -94,17 +94,17 @@ EOSIO_ABI( hello, (hi) )
 You can generate ABI and the web assembly code separately:
 
 ```python
-contract.build_abi()
+contract_builder_foo.build_abi()
 ```
 
 ```python
-contract.build_wast()
+contract_builder_foo.build_wast()
 ```
 
 Or you can generate both at the same time:
 
 ```python
-contract.build()
+contract_builder_foo.build()
 ```
 
 ## Deploy the contract
@@ -122,42 +122,29 @@ Then create an account which will be holding the contract:
 create_account("host", master)
 ```
 
-Next, let's redefine the contract, so that it's associated with the above account and thus becomes deployable:
+Next, let's redefine the contract, so that it's associated with the above account and thus becomes deployable. You can use the entire path to the contract's folder:
 
 ```python
-contract = Contract(host, contract.path())
+contract_foo = Contract(host, contract_builder_foo.path())
 ```
 
 Or you can use the name of the contract's folder (provided it's located in your smart-contract workspace):
 
 ```python
-contract = Contract(host, "foo_bar")
-```
-
-Or you can use the entire path to the contract's folder:
-
-```python
-contract = Contract(host, "/mnt/d/Workspaces/EOS/contracts/foo_bar")
+contract_foo = Contract(host, "foo")
 ```
 
 Next, we can deploy the contract:
 
 ```python
-contract.deploy()
+contract_foo.deploy()
 ```
 
 **NOTE:** In a similar way you could deploy a demo contract supplied by *EOSFactory*, for example:
 
 ```python
-contract = Contract(host, "01_hello_world")
-contract.deploy()
-```
-
-Or a demo contract supplied by *EOSIO*, for example:
-
-```python
-contract = Contract(host, "eosio.token")
-contract.deploy()
+contract_hello = Contract(host, "01_hello_world")
+contract_hello.deploy()
 ```
 
 ## Test the contract
@@ -171,20 +158,20 @@ create_account("carol", master)
 
 You can play with the contract by sending it actions with different arguments:
 
-```python
-contract.push_action("hi", {"user":alice}, permission=alice)
+```bash
+contract_foo.push_action("hi", {"user":alice}, permission=alice)
 ```
 
 ```python
-contract.push_action("hi", {"user":carol}, permission=carol)
+contract_foo.push_action("hi", {"user":carol}, permission=carol)
 ```
 
-```python
-contract.push_action("hi", {"user":alice}, permission=carol)
+```bash
+contract_foo.push_action("hi", {"user":alice}, permission=carol)
 ```
 
-```python
-contract.push_action("hi", {"user":carol}, permission=alice)
+```bash
+contract_foo.push_action("hi", {"user":carol}, permission=alice)
 ```
 
 **NOTE:** The `push_action` method takes three parameters:
@@ -196,33 +183,33 @@ contract.push_action("hi", {"user":carol}, permission=alice)
 Regarding permissions, *EOSFactory* offers several options:
 
 ```python
-contract.push_action("hi", {"user":alice}, alice)
+contract_foo.push_action("hi", {"user":alice}, alice)
+```
+
+```bash
+contract_foo.push_action("hi", {"user":alice}, permission=alice)
+```
+
+```bash
+contract_foo.push_action("hi", {"user":alice}, permission=(alice, Permission.ACTIVE))
 ```
 
 ```python
-contract.push_action("hi", {"user":alice}, permission=alice)
-```
-
-```python
-contract.push_action("hi", {"user":alice}, permission=(alice, Permission.ACTIVE))
-```
-
-```python
-contract.push_action("hi", {"user":alice}, permission=[(alice, Permission.ACTIVE), (carol, Permission.OWNER)])
+contract_foo.push_action("hi", {"user":alice}, permission=[(alice, Permission.ACTIVE), (carol, Permission.OWNER)])
 ```
 
 All the above variations should work, as the contract allows anyone to authorize the `hi` action.
 
 **NOTE:** Among other things, the console displays a debugger output, for example:
 
-```python
+```bash
 INFO debug user name: alice @ 12:26:05 hello.world.cpp[17](hi)
 ```
 
-This is the result of a `logger_info` clause in the `foo_bar.cpp` file (line `17`):
+This is the result of a `logger_info` clause in the `foo.cpp` file (line `17`):
 
-```python
-logger_info( "debug user name: ", name{user} );
+```cpp
+logger_info( "debug user name: ", name{user} )
 ```
 
 ## Modify the code, re-compile & re-deploy
@@ -240,30 +227,30 @@ void hi( account_name user ) {
 Re-compile the contract:
 
 ```python
-contract.build()
+contract_foo.build()
 ```
 
 And re-deploy the contract:
 
 ```python
-contract.deploy()
+contract_foo.deploy()
 ```
 
 Now, if we attempt to mismatch the user and the authority, the contract will throw an error:
 
-```python
-contract.push_action("hi", {"user":alice}, permission=carol)
+```bash
+contract_foo.push_action("hi", {"user":alice}, permission=carol1)
 ```
 
-```
+```bash
 Error 3090004: Missing required authority
 Ensure that you have the related authority inside your transaction!
 ```
 
 But if we use the appropriate authority, there should no error:
 
-```python
-contract.push_action("hi", {"user":alice}, permission=alice)
+```bash
+contract_foo.push_action("hi", {"user":alice}, permission=alice)
 ```
 
 ## Clean up
@@ -271,7 +258,7 @@ contract.push_action("hi", {"user":alice}, permission=alice)
 When your are done your contract, you might want to delete it from your workspace:
 
 ```python
-contract.delete()
+contract_foo.delete()
 ```
 
 **NOTE:** The above command removes the entire folder.
