wast => wasm all tested

--- a/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -113,11 +113,11 @@ The output should look like this:
 ```bash
 Scanning dependencies of target abi
 Built target abi
-Scanning dependencies of target wast
-Built target wast
+Scanning dependencies of target wasm
+Built target wasm
 ```
 
-**NOTE:** If the `ABI` file already exists in the `src` folder (you should keep it there, if you prefer to create it manually instead of relying on the *EOSIO* toolset) *CMake* will skip the `ABI` file generation step and proceed with `WAST` file generation.
+**NOTE:** If the `ABI` file already exists in the `src` folder (you should keep it there, if you prefer to create it manually instead of relying on the *EOSIO* toolset) *CMake* will skip the `ABI` file generation step and proceed with `WASM` file generation.
 
 #### Unit tests
 
@@ -175,10 +175,10 @@ The advantage of using the `CLANG` compiler (as opposed to the `WASM` compiler) 
 
 To access automated task navigate to the `Tasks` top menu option:
 
-- `Build` results in building the contract, with the `ABI` and `WAST`
+- `Build` results in building the contract, with the `ABI` and `WASM`
   files going to the `build` directory.
 - `Compile` results in compilation of the contract, without building
-  (neither `ABI` nor `WAST` are produced), but code errors, if any,
+  (neither `ABI` nor `WASM` are produced), but code errors, if any,
   are listed.
 - `Test` executes the `test1.py` script.
 - `Unittest` executes the `unittest1.py` script.
