--- a/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -239,7 +239,7 @@ contract_foo.deploy()
 Now, if we attempt to mismatch the user and the authority, the contract will throw an error:
 
 ```bash
-contract_foo.push_action("hi", {"user":alice}, permission=carol1)
+contract_foo.push_action("hi", {"user":alice}, permission=carol)
 ```
 
 ```bash
