changes and improvments

--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -104,7 +104,7 @@ If the test fails due to the `can't open file 'tests/01_hello_world.py'` error, 
 First, make sure *EOSFactory* configuration is correct by running this command:
 
 ```bash
-python3 -m eosfactory.core.config
+python3 -m eosfactory.config
 ```
 
 As a result, you should get data similar to this:
@@ -113,10 +113,9 @@ As a result, you should get data similar to this:
 The current configuration of EOSFactory:
 {
     "CONFIG_FILE": "/mnt/c/Workspaces/EOS/eosfactory/config.json",
-    "EOSIO_ABIGEN": "/usr/local/eosio.cdt/bin/eosio-abigen",
     "EOSIO_CLI_EXECUTABLE": "/usr/bin/cleos",
     "EOSIO_CONTRACT_WORKSPACE": "/mnt/c/Workspaces/EOS/contracts",
-    "EOSIO_CPP": "/usr/local/bin/eosio-cpp",
+    "EOSIO_CPP": "/usr/opt/eosio.cdt/1.4.1/bin/eosio-cpp",
     "EOSIO_GENESIS_JSON": "/mnt/c/Workspaces/EOS/eosfactory/localnode/genesis.json",
     "EOSIO_KEY_PRIVATE": "5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3",
     "EOSIO_KEY_PUBLIC": "EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV",
@@ -168,3 +167,5 @@ And then just run:
 ```bash
 ./install.sh
 ```
+I see, you use the contribution from ED Easy-D (Pull request: "Fix unrecognised option 'max-implicit-request' error on startup").
+We will include it to the next distribution of EOSFactory.
