--- a/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -299,5 +299,5 @@ Alternatively, use the `ctrl-D` shortcut.
 The python blocks in the current Markdown document can be executed with a provided bash tool. While the working directory is the root of the `EOSFactory` installation, do:
 
 ```bash
-eosfactory/utils/pythonmd.sh docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+eosfactory/pythonmd.sh docs/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
 ```
