--- a/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -22,7 +22,7 @@ In a bash terminal run the following command:
 
 ```bash
 cd eosfactory
-python3 -m eosfactory.utils.create_project foo_bar 01_hello_world
+python3 -m eosfactory.create_project foo_bar 01_hello_world
 ```
 
 **NOTE:** If you are on Windows and have not restarted your WSL bash terminal after *EOSFactory* installation, you'll need to do so before you execute this command (if you are using WSL bash terminal inside *Visual Studio Code*, restart your VSC instead).
@@ -39,7 +39,7 @@ Alternatively, you can add the `--vsc` option to the command and then VSC will l
 
 ```bash
 cd eosfactory
-python3 -m eosfactory.utils.create_project foo_bar 01_hello_world --vsc
+python3 -m eosfactory.create_project foo_bar 01_hello_world --vsc
 ```
 
 ## Folder structure
