--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -8,11 +8,11 @@ We've tested *EOSFactory* on the following platforms:
 - MacOS 10.13 (High Sierra)
 - Windows 10 (version 1803)
 
-**NOTE:** *EOSFactory* is compatible with *EOSIO* [v1.5.x](https://github.com/EOSIO/eos/releases/tag/v1.5.0).
+**NOTE:** *EOSFactory* is compatible with *EOSIO* [v1.6.0](https://github.com/EOSIO/eos/releases/tag/v1.6.0).
 
 ## General prerequisites
 
-We assume that you have successfully installed [*EOSIO*](https://github.com/EOSIO/eos) v1.5.0 on your machine. Binary installation suffices.
+We assume that you have successfully installed [*EOSIO*](https://github.com/EOSIO/eos) v1.6.0 on your machine. Binary installation suffices.
 
 *EOSIO* deployed in Docker is NOT supported.
 
@@ -26,7 +26,7 @@ Also, we assume that you have installed [*eosio.cdt*](https://github.com/EOSIO/e
 ## Prerequisites for Windows
 
 - We assume that you have [*Windows Subsystem for Linux - Ubuntu 18.04*](https://www.microsoft.com/en-us/p/ubuntu-1804/9n9tngvndl3q) installed.
-- The only option you have regarding *EOSIO* installation is building it in the Ubuntu 18.04 bash (supplied by WSL), as it cannot be compiled directly on a Windows machine. What we recommend is clone the *EOSIO* source code in Windows and keep it in the Windows file structure, yet build it in WSL, taking advantage of the fact that the entire Windows file structure is fully accessible in WSL.
+- Both EOSIO and eosio.cdt are installed to the Windows Ubuntu bash. If you want to compile them from sources, we recommend that they are cloned in the Windows file structure, taking advantage of the fact that the entire Windows file structure is fully accessible in WSL.
 - And finally, we assume you have [Python 3.5](https://www.python.org/downloads/release/python-356/) (or higher) available in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.6.5 by default. Also make sure your WSL has [pip 18.1](https://pypi.org/project/pip/) (or higher) installed.
 
 ## Install on Ubuntu & MacOS
@@ -59,7 +59,7 @@ Clone *EOSFactory* source code from the repository:
 git clone https://github.com/tokenika/eosfactory.git
 ```
 
-**NOTE:** We recommend keeping *EOSFactory* in the Windows file structure, not WSL.
+>**NOTE:** We recommend keeping *EOSFactory* in the Windows file structure that is accessible to WSL.
 
 Open a WSL bash terminal and navigate to the `eosfactory` folder:
 
@@ -92,12 +92,59 @@ python3 tests/01_hello_world.py
 python3 tests/02_eosio_token.py
 python3 tests/03_tic_tac_toe.py
 ```
+## Install from PyPi repository
+
+The current edition supports installation with the Python pip system. However, EOSFactory installed as a plain Python module is stripped of the shell utilities that come with the GitHub repository, mentioned above:
+
+* test scripts,
+* tutorials, some of them executable.
+
+The versions, GitHub and PyPi are identical in the code. They differ in their data folders. The configuration of any one can be printed with the command:
+
+```bash
+python3 -m eosfactory.config
+```
+
+In the printout, you cen see a note about the nature of the active package:
+
+```bash
+EOSFactory version 2.1.3.
+Dependencies:
+https://github.com/EOSIO/eos version 1.6.0
+https://github.com/EOSIO/eosio.cdt version 1.4.1
+Python version 3.5 or higher
+
+        EOSFactory is installed as a Python package.
+
+The current configuration of EOSFactory:
+{
+    "CONFIG_FILE": "/home/cartman/.local/eosfactory/config/config.json",
+    "EOSIO_CLI_EXECUTABLE": "/usr/bin/cleos",
+    "EOSIO_CONTRACT_WORKSPACE": "/mnt/",    
+..........................................
+..........................................
+```
+where the message *EOSFactory is installed as a Python package.* indicates the PyPi origin.
+
+
+You can install the pypi EOSFactory with the usual `pip` command:
+```bash
+pip3 install eosfactory
+```
 
 ## Troubleshooting specific errors
 
-#### Case 1
+### `nodeos --version` error
 
-If the test fails due to the `can't open file 'tests/01_hello_world.py'` error, make sure your current working directory is `eosfactory`.
+There is a bug in `eosio nodeos` executable that makes it to response erratically. 
+The command `python3 -m eosfactory.config` attempts to verify the version of the EOSIO installation -- unsuccessfully quite frequently issuing the following error message:
+  
+```bash
+ERROR!
+Cannot determine the version of the installed 'eosio' package.
+The error message:
+Command '['/usr/bin/nodeos', '--version']' returned non-zero exit status 255.
+```
 
 ## Troubleshooting general problems
 
