--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -148,7 +148,9 @@ Command '['/usr/bin/nodeos', '--version']' returned non-zero exit status 255.
 
 ## Troubleshooting general problems
 
-First, make sure *EOSFactory* configuration is correct by running this command:
+### Verify EOSFactory configuration
+
+Make sure *EOSFactory* configuration is correct by running this command:
 
 ```bash
 python3 -m eosfactory.config
@@ -157,13 +159,22 @@ python3 -m eosfactory.config
 As a result, you should get data similar to this:
 
 ```bash
+.......................................
+
 The current configuration of EOSFactory:
 {
-    "CONFIG_FILE": "/mnt/c/Workspaces/EOS/eosfactory/config.json",
+    "CONFIG_FILE": "/mnt/c/Workspaces/EOS/eosfactory/config/config.json",
     "EOSIO_CLI_EXECUTABLE": "/usr/bin/cleos",
-    "EOSIO_CONTRACT_WORKSPACE": "/mnt/c/Workspaces/EOS/contracts",
-    "EOSIO_CPP": "/usr/opt/eosio.cdt/1.4.1/bin/eosio-cpp",
-    "EOSIO_GENESIS_JSON": "/mnt/c/Workspaces/EOS/eosfactory/localnode/genesis.json",
+    "EOSIO_CONTRACT_WORKSPACE": "/mnt/c/Workspaces/EOS/eosfactory/contracts_windows",
+    "EOSIO_CPP": "/usr/bin/eosio-cpp",
+    "EOSIO_CPP_DIR": "/usr/opt/eosio.cdt/1.5.0/",
+    "EOSIO_CPP_INCLUDES": [
+        "/usr/opt/eosio.cdt/1.5.0/include",
+        "/usr/opt/eosio.cdt/1.5.0/include/eosiolib",
+        "/usr/opt/eosio.cdt/1.5.0/include/libc",
+        "/usr/opt/eosio.cdt/1.5.0/include/libcxx"
+    ],
+    "EOSIO_GENESIS_JSON": "/home/cartman/.local/share/eosio/nodeos/config/genesis.json",
     "EOSIO_KEY_PRIVATE": "5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3",
     "EOSIO_KEY_PUBLIC": "EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV",
     "EOSIO_SHARED_MEMORY_SIZE_MB": "200",
@@ -171,34 +182,60 @@ The current configuration of EOSFactory:
     "KEOSD_EXECUTABLE": "/usr/bin/keosd",
     "KEOSD_WALLET_DIR": "/home/cartman/eosio-wallet/",
     "LOCAL_NODE_ADDRESS": "127.0.0.1:8888",
-    "LOCAL_NODE_CONFIG_DIR": "/mnt/c/Workspaces/EOS/eosfactory/localnode/",
-    "LOCAL_NODE_DATA_DIR": "/mnt/c/Workspaces/EOS/eosfactory/localnode/",
+    "LOCAL_NODE_CONFIG_DIR": "/mnt/c/Workspaces/EOS/eosfactory/config",
+    "LOCAL_NODE_DATA_DIR": "/home/cartman/.local/share/eosio/nodeos/data/",
     "LOCAL_NODE_EXECUTABLE": "/usr/bin/nodeos",
     "NODEOS_STDOUT": null,
-    "NODE_IN_WINDOW": 0,
     "WALLET_MANAGER_ADDRESS": "127.0.0.1:8888",
     "WSL_ROOT": "C:/Users/cartman/AppData/Local/Packages/CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc/LocalState/rootfs"
 }
 
-You are free to overwrite the above settings with entries in the configuration file located here:
-/mnt/c/Workspaces/EOS/eosfactory/config.json
+.......................................
 
-
-There are undefined setting:
-{
-    "NODEOS_STDOUT": null
-}
-
-
-The current contents of the configuration file is:
-{
-    "EOSIO_CONTRACTS": "/mnt/c/Workspaces/EOS/eosio.contracts",
-    "EOSIO_CONTRACT_WORKSPACE": "/mnt/c/Workspaces/EOS/contracts",
-    "WSL_ROOT": " C:\\Users\\cartman\\AppData\\Local\\Packages\\CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc\\LocalState\\rootfs"
-}
 ```
 
-Next, verify that all the above paths are resolved.
+Next, note the entries of the value `null`. Some of them signal configuration errors.
+
+### Verify command lines
+
+Technically, EOSFactory wraps EOSIO executables -- namely `cleos`, `keos`, `nodeos` -- with its own API. Therefore, in error conditions, it make sense to inspect command lines sent to the EOSIO executables. The boolean variable `eosfactory.core.setup.is_print_command_line` sets the debug status. For example, if deployment of the contract in the test script `01_hello_world.py` fails, modify the script:
+
+```python
+        import eosfactory.core.setup as setUp   ## added
+        setup.is_print_command_line = True      ## added
+        contract.build()
+        contract.deploy()
+        setup.is_print_command_line = False     ## added
+```
+
+Now, if you run the script, you can see raw bash commands that can be inspected and tried:
+
+```bash
+######## command line sent to eosio-cpp:
+/usr/bin/eosio-cpp -I=/mnt/c/Workspaces/EOS/eosfactory/contracts_windows/_wslqwjvacdyugodewiyd /mnt/c/Workspaces/EOS/eosfactory/contracts_windows/_wslqwjvacdyugodewiyd/src/_wslqwjvacdyugodewiyd.cpp:
+WASM file writen to file: 
+    /mnt/c/Workspaces/EOS/eosfactory/contracts_windows/_wslqwjvacdyugodewiyd/build/_wslqwjvacdyugodewiyd.wasm
+######## command line sent to cleos:
+/usr/bin/cleos --url http://127.0.0.1:8888 set contract kswquviprmbi /mnt/c/Workspaces/EOS/eosfactory/contracts_windows/_wslqwjvacdyugodewiyd build/_wslqwjvacdyugodewiyd.wasm build/_wslqwjvacdyugodewiyd.abi
+```
+
+### Verify communication with `cleos`
+
+EOSFactory offers another debugging tool: printing requests send by `cleos` to nodeos, and responses from nodeos. For example, if deployment of the contract in the test script 01_hello_world.py fails, modify the script:
+
+```python
+        import eosfactory.core.setup as setUp   ## added
+        setup.is_print_command_line = True      ## added
+        setup.is_print_request = True           ## added
+        # setup.is_print_response = True        ## volume printout
+        contract.build()
+        contract.deploy()
+        setup.is_print_request = False          ## added
+        setup.is_print_command_line = False     ## added
+        setup.is_print_response = False         ## added
+```
+
+We cannot show the effect of the setup: it is very volume. 
 
 ## Subsequent installations
 
