--- a/docs/tutorials/01.InstallingEOSFactory.md
+++ b/docs/tutorials/01.InstallingEOSFactory.md
@@ -29,6 +29,15 @@ Also, we assume that you have installed [*eosio.cdt*](https://github.com/EOSIO/e
 - Both EOSIO and eosio.cdt are installed to the Windows Ubuntu bash. If you want to compile them from sources, we recommend that they are cloned in the Windows file structure, taking advantage of the fact that the entire Windows file structure is fully accessible in WSL.
 - And finally, we assume you have [Python 3.5](https://www.python.org/downloads/release/python-356/) (or higher) available in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.6.5 by default. Also make sure your WSL has [pip 18.1](https://pypi.org/project/pip/) (or higher) installed.
 
+## Python dependencies
+
+EOSFactory depends on the following not standard Python packages:
+
+```bash
+pip3 install termcolor
+pip3 install setuptools
+```
+
 ## Install on Ubuntu & MacOS
 
 Clone *EOSFactory* source code from the repository:
